# wpro-working

./: .gitignore  README.md  constants.py  pyproject.toml
data/: README.md  get_owid_data.ipynb  new_cases.csv  new_deaths.csv
data/sars_hongkong/: summary_data_clean.csv
emu_renewal/: calibration.py  distributions.py  outputs.py  process.py  renew.py  utils.py
explore/: semimech.ipynb
inperson/: 01-immunity.ipynb  02-multi-strain.ipynb  03-renewal-app.ipynb  04-tb.ipynb
inputs/: owid.py
notebooks/: 01-introduction.ipynb  02-analysis.ipynb  02-covid-malaysia.ipynb  02-simple-illustrations.ipynb  03-analysis_NUTS_walkthrough.ipynb  03-covid-malaysia.ipynb  03-sars-hongkong.ipynb  04-ebola-sierraleone.ipynb  04-sars-hongkong.ipynb  05-ebola-serraleone.ipynb  05-ebola-sierraleone.ipynb  05-nuts-exploration.ipynb  06-nuts-exploration.ipynb  age_specific_ifr.ipynb  age_stratification.ipynb  get_owid_data.ipynb  hetero_mix.ipynb  seir_model.ipynb  serial_latent_comps.ipynb
recap/: 01-seir-model.ipynb  02-child-suscept.ipynb  02_basic_calibration.ipynb  03-hetero-mix.ipynb  04-serial-latent-comps.ipynb  05-age-specific-ifr.ipynb  06-multi-strain.ipynb  07-immunity.ipynb  07-renewal.ipynb  08-multi-strain.ipynb  10-renewal2.ipynb  child_susept.ipynb  get_owid_data.ipynb  hetero_mix.ipynb  multi_strain.ipynb
renew/: 01-basics.ipynb  01-introduction.ipynb  02-analysis.ipynb  02-suscept-deplete.ipynb  02suscept-deplete.ipynb  03-vary-r.ipynb  04-apply-to-data.ipynb  04-compare-jax.ipynb  04optimise-against-model-data.ipynb  05-apply-to-data.ipynb  05-calibration.ipynb  05-nuts-calibration.ipynb  05apply-to-data.ipynb  05truncate-generation-dist.ipynb  06-calibration.ipynb  06apply-to-data.ipynb  06calibration-wip.ipynb  07-jax.ipynb  07-numpyro.ipynb  07jax.ipynb  08-numpyro-calibration.ipynb  08-numpyro.ipynb  09numpyro-jt.ipynb  austcovid.bib  renew.bib
renew/emu_renewal/: calibrate.py  calibration.py  distributions.py  markdown.py  outputs.py  process.py  renew.py  utils.py
renewal-illustration/: ideas_graph.ipynb
semimech/: 01basics.ipynb  02suscept-deplete.ipynb  03vary-r.ipynb  04optimise-against-model-data.ipynb  04optimise.ipynb  05optimise-all-params.ipynb  05truncate-generation-dist.ipynb  06apply-to-data.ipynb  07adjust-seed.ipynb  07optimise-test-data.ipynb  07test-opti.ipynb  08trig-process.ipynb  08truncate-generation-dist.ipynb  08truncate-generation_dist.ipynb  09apply-to-data-again.ipynb  09truncate-generation-dist.ipynb  basics.ipynb  clean_basics.ipynb  distributions.py  link_points.ipynb  outputs.py  process.py  renew.py  suscept_deplete.ipynb  vary_r0.ipynb
semimech/emu_renewal/: outputs.py  process.py  renew.py
special_topics/: 01-tb.ipynb
