[tool.poetry]
name = "emurenewal"
version = "0.1.0"
description = "EMU Renewal Model"
authors = ["David Shipman <dshipman@gmail.com>"]
license = "BSD 2-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
estival = "^0.5.0"
numpyro = "^0.13.2"
pyarrow = "^15.0.0"

jupyterlab = {version = "^4.1.0", optional = true}
ipywidgets = {version = "^8.1.2", optional = true}
pandas = "^2.1.4"
tabulate = "^0.9.0"
kaleido = "0.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
estival = { path = "../estival/", develop = true }
summerepi2 = { path = "../summer2/", develop = true }

[tool.poetry.extras]
jupyter = ["jupyterlab", "ipywidgets"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
