[tool.poetry]
name = "wpro_working"
version = "0.1"
readme = "README.md"
license = "BSD-2-Clause"
homepage = "https://github.com/monash-emu/wpro_working"
repository = "https://github.com/monash-emu/wpro_working"
documentation = "https://github.com/monash-emu/wpro_working"
keywords = [
    "covid19",
    "summerepi"
]
description = "Works in progress towards execution of our 2023/24 contract with WPRO to support Malaysia, the Philippines and Vietnam"
authors = [
    "James Trauer <james.trauer@monash.edu>",
    "David Shipman <david.shipman@monash.edu>",
    "Angus Hughes <angus.hughes@monash.edu>",
    "Romain Ragonnet <romain.ragonnet@monash.edu>",
]
packages = [
    {include = "emu_renewal"}
]

[tool.poetry.dependencies]
python = ">=3.8.0, <4.0.0"
estival = "==0.5.1"
kaleido = {version = "==0.2.1", optional = true}
summerepi2 = ">=1.3.0"
numpyro = ">=0.13.0"
jax = "<=0.4.24"

[tool.poetry.extras]
full = ["kaleido"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
